<resources>
    <string name="app_name">Trendy Bites</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>

    <!-- strings used in content_main.xml -->
    <string name="selectFoodPlace">Select food place</string>
    <string name="area">Locate Area</string>
    <string name="pickCategory">Pick a category</string>
    <string name="currentLocation">Current Location</string>
    <string name="txtWeather">Weather</string>
    <string name="txtBudget">Budget</string>
    <string name="txtRating">Rating</string>
    <string name="txtNutrition">Nutrition</string>

    <!-- strings used in content_weather_results.xml -->
    <string name="call">Call</string>

    <!-- strings used in content_budget_questionnaire.xml -->
    <string name="questions">Kindly answer a few questions</string>
    <string name="foodPreference">I like to eat</string>
    <string name="txtFoodBudget">Budget per person</string>
    <string name="txtPeople">Head Count</string>
    <string name="btnSuggest">Suggest</string>
    <string-array name="foodBudgetArray">
        <item>0$ - 5$</item>
        <item>5$ - 10$</item>
        <item>10$ - 15$</item>
        <item>15$ - 20$</item>
    </string-array>

    <!-- strings used in AndroidManifest.xml -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_information_results">Information</string>
    <string name="title_activity_budget_questionnaire">Budget</string>
    <string name="title_activity_budget_preferences">Budget Preferences</string>
    <string name="action_menu">Menu</string>
    <string name="title_activity_food_place_menu">FoodPlaceMenu</string>
    <string name="pref_fav_restaurant">favRestaurant</string>
    <string name="pref_fav_title">Favorite Places</string>
    <string name="pref_fav_dialog_title">Make this one of your favorite places?</string>
    <string name="action_favorites">Favorites</string>
    <string name="paymentHeader">Payment Methods</string>
    <string name="txtInformation">Information</string>
    <string name="attireHeader">Attire</string>
    <string name="smokingHeader">Smoking</string>
    <string name="takeOutHeader">TakeOut</string>
    <string name="dietHeader">Dietary Restrictions</string>
    <string name="mealsHeader">Meals</string>

</resources>