<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize">

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mxg1055.trendybites.WeatherResults"
    tools:showIn="@layout/activity_weather_results">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/saGreen"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/address"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/region"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/country"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phone"
        android:textSize="20sp"
        android:autoLink="web" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/call"
        android:background="@color/saGreen"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/web"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/paymentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btnCall"
        android:layout_marginTop="25dp"
        android:text="@string/paymentHeader"
        android:textColor="@color/saGreen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/paymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/paymentHeader"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <TextView
    android:id="@+id/attireHeader"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@id/paymentMethod"
    android:layout_marginTop="25dp"
    android:text="@string/attireHeader"
    android:textColor="@color/saGreen"
    android:textSize="20sp" />

    <TextView
        android:id="@+id/attire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/attireHeader"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/smokingHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/attire"
        android:layout_marginTop="25dp"
        android:text="@string/smokingHeader"
        android:textColor="@color/saGreen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/smoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/smokingHeader"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/takeOutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/smoking"
        android:layout_marginTop="25dp"
        android:text="@string/takeOutHeader"
        android:textColor="@color/saGreen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/takeOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/takeOutHeader"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dietHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/takeOut"
        android:layout_marginTop="25dp"
        android:text="@string/dietHeader"
        android:textColor="@color/saGreen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dietHeader"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mealsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/diet"
        android:layout_marginTop="25dp"
        android:text="@string/mealsHeader"
        android:textColor="@color/saGreen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/mealsHeader"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

</RelativeLayout>

</ScrollView>