<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mxg1055.trendybites.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="horizontal">

    <AutoCompleteTextView
        android:id="@+id/txtFoodPlace"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selectFoodPlace"
        android:drawableLeft="@drawable/ic_gps" />

    <Button
        android:id="@+id/btnCurrentLocation"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/currentLocation"
        android:background="@color/saGreen"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_search"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtFoodPlace"
        android:drawablePadding="-10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/pickCategory"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickCategory"
        android:layout_below="@id/btnCurrentLocation"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:id="@+id/imgLayoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickCategory"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_information"
            android:src="@mipmap/ic_information"
            android:paddingTop="10dp"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_below="@id/pickCategory" />

        <ImageView
            android:id="@+id/ic_budget"
            android:src="@mipmap/ic_budget"
            android:paddingTop="10dp"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_toRightOf="@id/ic_information"
            android:layout_below="@id/pickCategory" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/txtLayoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLayoutOne"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtInformation"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txtInformation"
            android:layout_below="@id/ic_information"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/txtBudget"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtBudget"
            android:layout_below="@id/ic_budget"
            android:layout_toRightOf="@id/txtInformation"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLayoutOne"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/placeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/address"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/placeId"
        android:autoLink="phone"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phone"
        android:autoLink="web"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
</RelativeLayout>
